<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="256dp"
        android:background="@drawable/btn_background"

        android:fontFamily="serif"
        android:onClick="launchSecondActivity"
        android:text="@string/button1"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textColorHint="#3F51B5"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="245dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/btn_background"
        android:fontFamily="serif"
        android:onClick="launchThirdActivity3"
        android:text="@string/button2"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="15sp"
        android:textStyle="bold"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="248dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="456dp"
        android:background="@drawable/btn_background"
        android:fontFamily="serif"
        android:onClick="launchFourthActivity"
        android:text="@string/button3"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/btn_background"
        android:fontFamily="serif"
        android:onClick="launchFifthActivity"
        android:text="@string/button4"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_timer"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginBottom="564dp"
        android:text="@string/timer"
        android:textColor="#DAD16543"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="612dp"
        android:fontFamily="serif"
        android:text="Car Expert"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>