<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:background="@drawable/gradient_background"
    tools:context=".SecondActivity">


    <ImageView
        android:id="@+id/Imageview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="493dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bmw1"
        tools:srcCompat="@tools:sample/avatars" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="37dp"
        android:entries="@array/cartype_arrays"
        app:layout_constraintStart_toEndOf="@+id/Imageview1" />

    <TextView
        android:id="@+id/textView2_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="275dp"
        android:text="@string/textview2_true"
        android:textColor="#fbc531"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/identify_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="377dp"
        android:background="@drawable/btn1"
        android:text="@string/identify_button"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2_label"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="13dp"
        android:text="@string/textview2_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2_answer"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"

        android:layout_marginTop="-47dp"

        android:layout_marginEnd="34dp"
        android:layout_marginBottom="167dp"
        android:text="@string/textview_answer"
        android:textColor="#fbc531"
        android:textColorHint="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/correct_answer_label"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="229dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="182dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/countdown1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="44dp"
        android:textSize="60sp" />


</RelativeLayout>